# Infosys

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  create_admin.py  docker-compose.yml  main.py  pyproject.toml  seed_db.py  telegram.patch  test.patch
Audio/: io_queues.py  speech_to_text.py  text_to_speech.py
Backend/: database.py  users.db
Mail/: email_handler.py  email_sender.py  login.py  web_login.py
Mail/static/: admin.css  admin.js  assistant.js  dashboard.css  dashboard.js  lang.css  lang.js  loader.css  login.css  login.js  pin_reveal.css  pin_reveal.js  signup.css  signup.js
Mail/templates/: admin.html  dashboard.html  login.css  login.html  login.js  pin_reveal.html  signup.html  signup.jsx
Telegram/: telegram.py
Whatsapp/: whatsapp.py
app/agent/: core.py
app/core/: config.py  errors.py  logging.py
app/database/: admin.py  database.py  tasks.py  users.py  utils.py
app/services/: auth.py  email.py  telegram.py
app/services/mocks/: __init__.py  mock_agent.py  mock_email.py  mock_telegram.py
app/tools/: __init__.py  email_tools.py  registry.py  system_tools.py  task_tools.py  telegram_tools.py
app/web/: __init__.py  utils.py
app/web/routes/: admin.py  assistant.py  auth.py
app/web/static/: admin.css  admin.js  assistant.js  dashboard.css  dashboard.js  lang.js  login.css  login.js  pin_reveal.css  pin_reveal.js  signup.js  toast.css  toast.js  transitions.css  voice-nav.js
app/web/templates/: admin.html  dashboard.html  login.html  pin_reveal.html  setup_integrations.html  signup.html  telegram_auth.html
docs/: agent_design.md  architecture.md  setup.md  testing-guide-mock.md  testing-guide-real.md  tools.md
tests/: conftest.py  test_agent.py  test_mock_services.py  test_tools.py
