[project]
name = "infosys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.8",
    "bcrypt>=5.0.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.2",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "openai-whisper>=20250625",
    "pipwin>=0.5.2",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "pyttsx3>=2.99",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.14.5",
    "sumy>=0.12.0",
]
