[project]
name = "infosys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.8",
    "bcrypt>=5.0.0",
    "deep-translator>=1.11.4",
    "flask>=3.1.2",
    "langdetect>=1.0.9",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "sumy>=0.12.0",
    "telethon>=1.42.0",
    "twilio>=9.10.3",
]
