[project]
name = "infosys"
version = "0.1.0"
description = "A modular voice assistant with an OpenRouter tool-calling agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.8",
    "bcrypt>=5.0.0",
    "deep-translator>=1.11.4",
    "flask>=3.1.2",
    "httpx>=0.28.0",
    "telethon>=1.42.0",
    "gunicorn>=23.0.0",
    "flask-socketio>=5.4.1",
    "simple-websocket>=1.0.0",
    "eventlet>=0.38.2",
    "pydantic-settings>=2.7.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-mock>=3.14"]
